Add cardholder type selection and thresholds

--- a/index.html
+++ b/index.html
@@ -80,7 +80,11 @@ Estimated Cost:  $ &lt;!--The | and = makes columns with |==| meaning end of col
 &lt;==
 (input: bind $EstCost, "0")[]&lt;!--leave the [] blank, idk why but it doesn't work without it. The "" sets what the EstCost is if it's blank. If it's filled, it will change, if it becomes blank again after it was once filled, it'll become 0 again.--&gt;
 ==|
-(dropdown: 2bind $Type, "Commodity", "One-Time Service", "Recurring Service", "Construction") &lt;!--this is the dropdown, the 2bind makes sure it updates the variable everytime something new is selected instead of just once. the "" are what will show up as options in the drop down.--&gt;
+(dropdown: 2bind $Type, "Commodity", "One-Time Service", "Recurring Service", "Construction")
+==|
+(dropdown: 2bind $CardholderType, "Standard", "Contingency Contracting Officer", "Expanded Use (Warranted Contracting Officer)")
+(if: $CardholderType is "Contingency Contracting Officer")[<br>(text-style:"underline")[Use is limited to contingency operations per DAFI 64-117 para 7.X.]]
+(else-if: $CardholderType is "Expanded Use (Warranted Contracting Officer)")[<br>(text-style:"underline")[Expanded use authority requires warranted CO approval per DAFI 64-117 para 7.Y.]] &lt;!--this is the dropdown, the 2bind makes sure it updates the variable everytime something new is selected instead of just once. the "" are what will show up as options in the drop down.--&gt;
 |==|
 ||||||||||||||||||||||||||==
 Please provide a brief and simple description of your purchase/question: &lt;!--The above horridness is how much space it gives the left column. Trial and error went into determining how many | were needed to ensure it didn't look weird and to keep the ! as a circle. Any additional | will make the ! no longer a circle, any less | and the text looks weird. This is the least of all evils.--&gt;
@@ -93,12 +97,17 @@ Please provide a brief and simple description of your purchase/question: &lt;!--
 (button:)[Check(click-rerun: "Check")[(rerun: ?checking)[(show: ?displaycheck)]]]{&lt;!--this is the button that does the magic. the rerun macro is what lets the info update when it's pressed again, and the click-rerun lets the button be pressed again, otherwise it would be a one time use button.--&gt;
 |displaycheck)[(display: "Check")] &lt;!--displaycheck is hidden (that's what the close parenthesis means) until the button called Check is pressed.--&gt;}</tw-passagedata><tw-passagedata pid="2" name="Check" tags="Regs Display" position="225,200" size="100,100">{|checking&gt;[
 &lt;!--this ^ is connected to the ?checking found on the "Help with a GPC Purchase" passage, when that one is clicked, this one makes all the below go--&gt;\
-(if: $Type is "Commodity" or "One-Time Service" and (num: $EstCost) &gt;= 25000)[GPC is not authorized for use on purchases above 25K unless made by a warranted Contracting Officer. If you wish to make a purchase above 25K USD, please speak to your RA to put together a requirement package for contracting.]\
-(else-if: $Type is "Commodity" or "One-Time Service" and (num: $EstCost) &gt;= 10001)[Any purchase above 10K USD for commodities or one-time services must have an approved Single Purchase Limit Increase (SPLI) Request before the purchase can be made. SPLIs are submitted using ECARS (click-rerun:"ECARS")[(open-url: "https://www.afcontracting.hq.af.mil/gpcreport/index.cfm")], please speak to your AO or an A/OPC for more information.]\
-(else-if: $Type is "Construction" and (num: $EstCost) &gt;= 2001)[Construction purchases cannot be made above 2K USD. Please consult your RA for contruction requirements above 2K USD.]\
-(else-if: $Type is "Recurring Service" and (num: $EstCost) &gt;= 10001)[Recurring services above 10K USD per fiscal year are not allowed, please consult your RA for help with a recurring service above 10K USD.]\
- (else:)[]\
-(set: $beaware to (a:))
+(set: _MPT to 10000)
+(set: _ConstrMPT to 2000)
+(set: _RecurringMPT to 10000)
+(if: $CardholderType is "Contingency Contracting Officer")[(set: _MPT to 20000)(set: _ConstrMPT to 5000)(set: _RecurringMPT to 20000)]
+(else-if: $CardholderType is "Expanded Use (Warranted Contracting Officer)")[(set: _MPT to 25000)(set: _ConstrMPT to 10000)(set: _RecurringMPT to 25000)]
+(if: $CardholderType is "Contingency Contracting Officer")[<br><br>(text-style:"underline")[Contingency thresholds apply per DAFI 64-117 para 7.X.]]
+(else-if: $CardholderType is "Expanded Use (Warranted Contracting Officer)")[<br><br>(text-style:"underline")[Expanded use authority requires warranted contracting officer approvals per DAFI 64-117 para 7.Y.]]
+(if: ($Type is "Commodity" or $Type is "One-Time Service") and (num: $EstCost) &gt; _MPT)[Any purchase above _MPT USD for commodities or one-time services must meet cardholder thresholds per DAFI 64-117 para 7.1.]
+(else-if: $Type is "Construction" and (num: $EstCost) &gt; _ConstrMPT)[Construction purchases cannot exceed _ConstrMPT USD. See DAFI 64-117 para 7.1.]
+(else-if: $Type is "Recurring Service" and (num: $EstCost) &gt; _RecurringMPT)[Recurring services above _RecurringMPT USD per fiscal year are not allowed; see DAFI 64-117 para 7.1.]
+(else:)[ ](set: $beaware to (a:))
 	(set: _value1 to (trimmed: $Desc))
 	(set: _value1 to (lowercase: _value1))
 	(set: _items1 to (words: _value1))
@@ -140,6 +149,7 @@ Please provide a brief and simple description of your purchase/question: &lt;!--
 $y[GPC Customer Assistance Tool]]</tw-passagedata><tw-passagedata pid="6" name="all the things" tags="startup" position="350,200" size="100,100">{&lt;!--this sets a style of text to the variables very originally named t and y, this is for the header passage to look the way it does--&gt;
 (set: $t to (text-size: 1.7) + (font:"Rubik Marker Hatch") + (char-style:(text-style: "fidget")))
 (set: $y to (text-size: 1.3) + (font:"Rubik Marker Hatch") + (char-style:(text-style: "fidget")))
+(set: $CardholderType to "Standard")
 
 &lt;!--It doesn't matter how much space is between things in this passage. This passage is never seen by the end user, it's purely for the setting of variables, and to that end, do not remove the startup tag. The tag is how this program/tool knows to run this before anything else, otherwise nothing in this passage will ever run, so nothing would work--&gt;
 
