--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Estimated Cost:  $ &lt;!--The | and = makes columns with |==| meaning end of col
 &lt;==
 (input: bind $EstCost, "0")[]&lt;!--leave the [] blank, idk why but it doesn't work without it. The "" sets what the EstCost is if it's blank. If it's filled, it will change, if it becomes blank again after it was once filled, it'll become 0 again.--&gt;
 ==|
-Purchase Type: (dropdown: 2bind $Type, "Commodity", "One-Time Service", "Recurring Service", "Construction")<br>Cardholder Type: (dropdown: 2bind $CardType, "Standard", "CCO", "Expanded Use")<br>Location: (dropdown: 2bind $Location, "CONUS", "OCONUS") &lt;!--dropdowns for purchase type, cardholder type, and location--&gt;
+Purchase Type: (dropdown: 2bind $Type, "Commodity", "One-Time Service", "Recurring Service", "Construction")<br>Cardholder Type: (dropdown: 2bind $CardType, "Standard", "CCO", "Expanded Use")<br>Location: (dropdown: 2bind $Location, "CONUS", "OCONUS")<br><br>Standard users: $10K commodities/services, $2K construction.<br>CCO cardholders: $20K CONUS / $35K OCONUS, $30K construction.<br>Expanded Use: may exceed micro-purchase limits up to the Simplified Acquisition Threshold (normally $250K) with a contracting action.<br>Purchases above these limits require an appropriate contract or payment instrument.<br><!--dropdowns for purchase type, cardholder type, and location-->
 |==|
 ||||||||||||||||||||||||||==
 Please provide a brief and simple description of your purchase/question: &lt;!--The above horridness is how much space it gives the left column. Trial and error went into determining how many | were needed to ensure it didn't look weird and to keep the ! as a circle. Any additional | will make the ! no longer a circle, any less | and the text looks weird. This is the least of all evils.--&gt;
@@ -102,10 +102,11 @@ Please provide a brief and simple description of your purchase/question: &lt;!--
     (if: $Type is "Construction")[(set: _micro to 2000)]
     (else:)[(set: _micro to 10000)]
 ]\
-(if: $CardType is "Expanded Use" and (num: $EstCost) &gt; _sat)[Expanded Use cardholders may not use the GPC for purchases above the Simplified Acquisition Threshold (normally $250K; higher in some contingency or commercial scenarios). Work with your RA to put together a requirement package for contracting.]\
-(else-if: $CardType is "Expanded Use" and (num: $EstCost) &gt; _micro)[This purchase exceeds the micro-purchase limit of $[_micro]. Expanded Use cardholders may exceed micro-purchase limits up to the Simplified Acquisition Threshold (normally $250K) when a contracting action exists. Confirm an appropriate contract or payment instrument is in place before purchasing.]\
-(else-if: $CardType is "CCO" and (num: $EstCost) &gt; _micro)[This purchase exceeds the contingency micro-purchase limit of $[_micro] for CCO cardholders. A contracting action is required before proceeding.]\
-(else-if: (num: $EstCost) &gt; _micro)[This purchase exceeds the standard micro-purchase limit of $[_micro]. Standard cardholders must obtain an approved Single Purchase Limit Increase and have a contracting action in place before proceeding. Recurring services above 10K USD per fiscal year remain unauthorized.]\
+(if: $Type is "Recurring Service" and (num: $EstCost) > 10000)[Recurring services above 10K USD per fiscal year are not allowed, please consult your RA for help with a recurring service above 10K USD.]\
+(else-if: $CardType is "Expanded Use" and (num: $EstCost) > _sat)[Expanded Use cardholders may not use the GPC for purchases above the Simplified Acquisition Threshold (normally $250K; higher in some contingency or commercial scenarios). Work with your RA to put together a requirement package for contracting.]\
+(else-if: $CardType is "Expanded Use" and (num: $EstCost) > _micro)[This purchase exceeds the micro-purchase limit of $[_micro]. Expanded Use cardholders may exceed micro-purchase limits up to the Simplified Acquisition Threshold (normally $250K) when a contracting action exists. Confirm an appropriate contract or payment instrument is in place before purchasing.]\
+(else-if: $CardType is "CCO" and (num: $EstCost) > _micro)[This purchase exceeds the contingency micro-purchase limit of $[_micro] for CCO cardholders. A contracting action is required before proceeding.]\
+(else-if: (num: $EstCost) > _micro)[This purchase exceeds the standard micro-purchase limit of $[_micro]. Standard cardholders must obtain an approved Single Purchase Limit Increase and have a contracting action in place before proceeding.]\
 (else:)[]\
 (set: $beaware to (a:))
 	(set: _value1 to (trimmed: $Desc))
